# PhysX

./: .gitignore
physx/: generate_projects.bat  物理.drawio
physx/compiler/public/: CMakeLists.txt
physx/compiler/vc15win64/: .gitignore  .gitignore.txt  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  PhysXSDK.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
physx/compiler/vc15win64/PhysXDll/: ControlledScene.cpp  ControlledScene.h  PhysXDll.cpp  PhysXDll.h  PhysXDll.vcxproj  PhysXDll.vcxproj.filters  PhysXManager.cpp  PhysXManager.h  PhysXPInvokeHelper.cpp  PhysXPInvokeHelper.h  物理.drawio
physx/source/compiler/cmake/linux/: CMakeLists.txt
physx/source/compiler/cmake/mac/: CMakeLists.txt
physx_net/: PhysicsInterface.cs
physxdll/: CMakeLists.txt  build_android.bat  build_linux.sh
physxdll/compiler/linux/: CMakeLists.txt
physxdll/compiler/windows/: CMakeLists.txt
physxdll/include/: ControlledScene.h  PhysXDll.h  PhysXPInvokeHelper.h
physxdll/src/: ControlledScene.cpp  PhysXDll.cpp  PhysXManager.cpp  PhysXPInvokeHelper.cpp
